--- a/pe_packer_detector/data/label_mapping.json
+++ b/pe_packer_detector/data/label_mapping.json
@@ -1,26 +1,28 @@
 {
   "ASPack": 0,
   "Alienyze": 1,
-  "BeRoEXEPacker": 2,
-  "EXpressor": 3,
-  "Enigma Virtual Box": 4,
-  "Eronana Packer": 5,
-  "Exe32pack": 6,
-  "FSG": 7,
-  "JDPack": 8,
-  "MEW": 9,
-  "MPRESS": 10,
-  "Molebox": 11,
-  "NSPack": 12,
-  "Neolite": 13,
-  "PECompact": 14,
-  "PEtite": 15,
-  "Packman": 16,
-  "RLPack": 17,
-  "TELock": 18,
-  "Themida": 19,
-  "UPX": 20,
-  "Yoda-Crypter": 21,
-  "Yoda-Protector": 22,
-  "not-packed": 23
+  "Amber": 2,
+  "BeRoEXEPacker": 3,
+  "EXpressor": 4,
+  "Enigma Virtual Box": 5,
+  "Eronana Packer": 6,
+  "Exe32pack": 7,
+  "FSG": 8,
+  "JDPack": 9,
+  "MEW": 10,
+  "MPRESS": 11,
+  "Molebox": 12,
+  "NSPack": 13,
+  "Neolite": 14,
+  "PECompact": 15,
+  "PEtite": 16,
+  "Packman": 17,
+  "RLPack": 18,
+  "TELock": 19,
+  "Themida": 20,
+  "UPX": 21,
+  "WinUpack": 22,
+  "Yoda-Crypter": 23,
+  "Yoda-Protector": 24,
+  "not-packed": 25
 }
